<resources>
    <string name="app_name">KiwiCart</string>
    <string name="description_test">Description</string>
    <string name="itemUnavailable">Unavailable</string>
    <string name="alertDialogTitle">Are you sure you want to delete all items?</string>
    <string name="alertDialogConfirmation">Yes</string>
    <string name="alertDialogDeny">No</string>
    <string name="snackbarCartTitle">Item removed from Cart</string>
    <string name="snackbarFavoriteTitle">Item removed from favorites</string>
    <string name="snackbarShopTitle">Item removed from shop</string>
    <string name="snackbarAction">Action</string>
    <string name="sellButtonText">Sell</string>
    <string name="updateButtonText">Update</string>
    <string name="editTextRequired">Required*</string>
    <string name="productTitle">Product Title</string>
    <string name="productPrice">Price : 150 Ron</string>
    <string name="productQuantity">1</string>
    <string name="decrement_image_button">decrement Image Button</string>
    <string name="increment_image_button">Increment Image Button</string>
    <string name="product_image_description">Product Image</string>
    <string name="totalCartCard">Total:</string>
    <string name="totalPriceCart">100 Ron</string>
    <string name="cartBuyButtonText">Buy</string>
    <string name="selected_product_image">Selected product image</string>
    <string name="fab_description">Trigger to select image from Gallery</string>
    <string name="sellButtonDashboard">Sell</string>
    <string name="productTitleDashboard">Title</string>
    <string name="productDescriptionDashboard">Description</string>
    <string name="productPriceDashboard">Price</string>
    <string name="productQuantityDashboard">Quantity</string>
    <string name="product_image_from_details">Product Image from Details</string>
    <string name="productTitleDetails">Title</string>
    <string name="productPriceDetails">Price : 250 Ron</string>
    <string name="productQuantityDetails">Qty : 2</string>
    <string name="productDescriptionDetails">Description</string>
    <string name="buyButtonDetails">Buy item</string>
    <string name="favorite_fab">Add to favorite option</string>
    <string name="pop_menu_option">Pop menu option</string>
    <string name="product_image_card">Product image</string>
    <string name="buy_item">Buy item</string>
    <string name="home_nav_bar">Home</string>
    <string name="dashboard_nav_bar">Dashboard</string>
    <string name="favorite_nav_bar">Favorite</string>
    <string name="cart_nav_bar">Cart</string>
    <string name="edit_popMenu">Edit</string>
    <string name="delete_popMenu">Delete</string>
    <string name="dialog_text_button">Ok</string>
    <string name="dialog_cart_message">Thank you for your purchase. Your fictive order will never be processed and your fictive products will never get to your home.\n Have a nice day!</string>
    <string name="congrats">Congrats</string>
    <string name="cart_dialog_icon">Dialog icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>