<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cartCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_cartProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_cart"
        android:contentDescription="@string/product_image_description" />

    <TextView
        android:id="@+id/tv_cartProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/productTitle"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_cartProduct"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cartProductDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:maxLines="4"
        android:text="@string/description_test"
        app:layout_constraintStart_toEndOf="@+id/iv_cartProduct"
        app:layout_constraintTop_toBottomOf="@+id/tv_cartProductTitle" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cartProduct" />

    <TextView
        android:id="@+id/tv_cartProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/productPrice"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <ImageView
        android:id="@+id/iv_cartProductIncrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_shape"
        android:src="@drawable/ic_baseline_add"
        app:layout_constraintBottom_toBottomOf="@+id/tv_cartProductQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_cartProductQuantity"
        android:contentDescription="@string/increment_image_button" />

    <TextView
        android:id="@+id/tv_cartProductQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/productQuantity"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cartProductDecrement"
        app:layout_constraintEnd_toStartOf="@+id/iv_cartProductIncrement"
        app:layout_constraintTop_toTopOf="@+id/iv_cartProductDecrement" />

    <ImageView
        android:id="@+id/iv_cartProductDecrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape"
        android:src="@drawable/ic_baseline_remove"
        app:layout_constraintBottom_toBottomOf="@+id/tv_cartProductPrice"
        app:layout_constraintEnd_toStartOf="@+id/tv_cartProductQuantity"
        app:layout_constraintTop_toTopOf="@+id/tv_cartProductPrice"
        android:contentDescription="@string/decrement_image_button" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cartProductPrice" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

