<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/shop_recycler_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="2dp"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/popButton"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:contentDescription="@string/pop_menu_option"
                android:elevation="10dp"
                android:src="@drawable/ic_baseline_more_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/product_image_card"
                android:scaleType="centerCrop"
                android:src="@drawable/product_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/separator"
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_below="@+id/iv_product"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="@+id/iv_product"
                app:layout_constraintTop_toBottomOf="@+id/iv_product" />

            <TextView
                android:id="@+id/tv_productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator"
                android:layout_gravity="center"
                android:maxLength="20"
                android:text="@string/productTitle"
                app:layout_constraintEnd_toEndOf="@+id/separator"
                app:layout_constraintStart_toStartOf="@+id/separator"
                app:layout_constraintTop_toBottomOf="@+id/iv_product" />

            <TextView
                android:id="@+id/tv_productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_productName"
                android:layout_gravity="center"
                android:text="@string/productPrice"
                android:textColor="@color/red"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/separator"
                app:layout_constraintStart_toStartOf="@+id/separator"
                app:layout_constraintTop_toBottomOf="@+id/tv_productName" />

            <Button
                android:id="@+id/btnBuyProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_productPrice"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_baseline_shopping_cart"
                android:text="@string/buy_item"
                app:layout_constraintEnd_toEndOf="@+id/separator"
                app:layout_constraintStart_toStartOf="@+id/separator"
                app:layout_constraintTop_toBottomOf="@+id/tv_productPrice" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
