<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogContainerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_backround"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialogHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_dialog_backround"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/congrats"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dialogHeaderImageIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/cart_dialog_icon"
            android:src="@drawable/ic_baseline_sentiment"
            app:layout_constraintBottom_toBottomOf="@id/dialogHeaderTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/dialogHeaderTextView" />

        <TextView
            android:id="@+id/dialogContentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_cart_message"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/dialogHeaderTextView"
            tools:layout_editor_absoluteX="21dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieLoadingAnimation"
            android:layout_width="240dp"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogContentTextView"
            app:lottie_autoPlay="true"
            app:lottie_fileName="shopcart.json"
            app:lottie_loop="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
